apps/example-test-3/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-test-3
  namespace: dev
  labels:
    app: example-test-3
    backstage.io/kubernetes-id: example-test-3
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-test-3
  template:
    metadata:
      labels:
        app: example-test-3
        backstage.io/kubernetes-id: example-test-3
        environment: dev
    spec:
      containers:
        - name: example-test-3
          image: jaykumark7/example-test-3:1.0.1
          ports:
            - containerPort: 5000
