apps/example-test-3/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-test-3
  namespace: dev
  labels:
    backstage.io/kubernetes-id: example-test-3
    environment: dev
spec:
  selector:
    app: example-test-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
